<resources>
    <string name="app_name">Katalog Filmku V4</string>
    <string name="title_home">Halaman Utama</string>
    <string name="movies">Film</string>
    <string name="tv_show">Acara TV</string>
    <string name="favorite">Favorite</string>
    <string name="film_name">Judulnya</string>
    <string name="change_language_settings">Ganti Bahasa</string>
    <string name="poster">Poster</string>
    <string name="tv_film_name">Nama Film</string>
    <string name="tv_release_date">Tanggal Rilis :</string>
    <string name="tv_first_air_date">Pertama Kali Tayang :</string>
    <string name="tv_overview">Gambaran Ikhtisar : </string>
    <string name="poster_image">Gambar Poster</string>
    <string name="you_choose">Kamu Memilih </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popularity">Kepopuleran :</string>
    <string name="vote">Pemungutan Suara :</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
</resources>