<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivityMovie">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_poster_movie"
            android:layout_width="322dp"
            android:layout_height="596dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/poster_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/txt_film_name_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/film_name"
            android:textColor="@color/item"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_first" />

        <!--Pembatas Tipis 1-->
        <TextView
            android:id="@+id/title_release_date"
            style="@style/TextSpec.Field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_2_bottom" />

        <TextView
            android:id="@+id/txt_release_date"
            style="@style/TextSpec.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_release_date" />

        <!--Pembatas Tebal-->
        <TextView
            android:id="@+id/title_popularity"
            style="@style/TextSpec.Field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_release_date" />

        <TextView
            android:id="@+id/txt_popularity_movie"
            style="@style/TextSpec.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_popularity" />

        <TextView
            android:id="@+id/title_vote"
            style="@style/TextSpec.Field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity_movie" />

        <!--release-->
        <TextView
            android:id="@+id/txt_vote_movie"
            style="@style/TextSpec.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_vote" />

        <TextView
            android:id="@+id/title_overview"
            style="@style/TextSpec.Field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_overview" />

        <!--popularity-->
        <TextView
            android:id="@+id/txt_overview_movie"
            style="@style/TextSpec.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_overview" />

        <View
            android:id="@+id/view_first"
            android:layout_width="0dp"
            android:layout_height="0.001dp"
            android:layout_marginTop="0dp"
            android:background="#bbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster_movie" />

        <!--vote-->
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0.001dp"
            android:background="#bbb"
            app:layout_constraintBottom_toTopOf="@id/view_2"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_2"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="12dp"
            android:background="#ececec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_film_name_movie" />

        <!--Pembatas Tipis overview-->
        <View
            android:id="@+id/view_2_bottom"
            android:layout_width="0dp"
            android:layout_height="0.001dp"
            android:layout_marginStart="16dp"
            android:background="#bbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_2" />

        <!--overview-->
        <View
            android:id="@+id/view_overview"
            android:layout_width="0dp"
            android:layout_height="0.001dp"
            android:layout_marginTop="4dp"
            android:background="#bbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_vote_movie" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@+id/txt_vote_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_release_date"
            app:srcCompat="@drawable/ic_favorite_border_white_24dp" />

        <include
            android:id="@+id/include"
            layout="@layout/layout_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>